<resources>
    <string name="app_name">Book Manager</string>

    <!-- LoginActivity -->
    <string name="title_activity_login">Sign in</string>
    <string name="action_auto_login">Remember my password</string>
    <string name="recover_pass">Forgot password ?</string>
    <string name="prompt_user_login">Username</string>
    <string name="prompt_password_login">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="tv_register">Create new account</string>
    <string name="notify_empty_user">Username can not be empty!</string>
    <string name="notify_length_pass">Password must have at least 5 characters</string>
    <string name="notify_empty_pass">Password can not be empty!</string>
    <string name="notify_wrong_username_password">Username or password not exist!</string>

    <!--MenuActivity-->
    <string name="title_activity_menu">Menu</string>
    <string name="user">Profile</string>
    <string name="book">Book</string>
    <string name="category">Category</string>
    <string name="invoice">Invoice</string>
    <string name="best_selling">Best Selling</string>
    <string name="statistical">Statistical</string>

    <!--InvoiceActivity-->
    <string name="title_activity_invoice">Invoice</string>
    <string name="edt_invoice_id">Invoice id</string>
    <string name="btn_invoice_date">Pick date</string>
    <string name="btn_invoice_add">Add</string>
    <string name="notify_wrong_text">Input less than 7 characters</string>
    <string name="notify_choose_input">You must pick the datetime</string>
    <string name="notify_input_successful">Add successful</string>
    <string name="notify_error">Error</string>

    <!--UserActivity-->
    <string name="title_activity_user">User</string>

    <!--BookActivity-->
    <string name="title_activity_book">Book</string>

    <!--CategoryActivity-->
    <string name="title_activity_category">Category</string>

    <!--BestSellActivity-->
    <string name="title_activity_best_sell">Best Sell</string>
    <string name="tv_title_best_sell">Top 10 book of the month</string>

    <!--StatisticalActivity-->
    <string name="title_activity_statistical">Statistical</string>

    <!--InvoiceDetailActivity-->
    <string name="title_activity_invoice_detail">Invoice Detail</string>
    <string name="invoice_detail_book_id">Book id</string>
    <string name="invoice_detail_sum">Cost</string>
    <string name="invoice_detail_book_price">Price</string>
    <string name="invoice_detail_quantity">Quantity</string>

    <!--AddBookActivity-->
    <string name="title_activity_add_book">Add new Book</string>
    <string name="edt_input_book_id">Book code</string>
    <string name="edt_input_book_name">Book name</string>
    <string name="edt_input_book_author">Author</string>
    <string name="edt_input_book_producer">Producer</string>
    <string name="edt_input_book_price">Price</string>
    <string name="edt_input_book_quantity">Quantity</string>

    <!--AddUserActivity-->
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="edt_input_user_uname">Username</string>
    <string name="edt_input_user_password">Password</string>
    <string name="edt_input_user_re_password">Repassword</string>
    <string name="edt_input_user_phone">Phone</string>
    <string name="edt_input_user_full_name">Full name</string>

    <!--AddCategoryActivity-->
    <string name="title_activity_add_category">Add new Category</string>
    <string name="edt_input_category_id">Category code</string>
    <string name="edt_input_category_name">Category name</string>
    <string name="edt_input_category_position">Position</string>
    <string name="edt_input_category_description">Description</string>

    <!--Sample-->

    <!--Toolbar Menu-->
    <string name="action_search">Search</string>
    <string name="action_add_user">Add new user</string>
    <string name="action_change_pass">Change password</string>

    <!--Drawer Navigation-->
    <string name="menu_home">Home</string>
    <string name="menu_help">Help</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="btn_action_cancel">Cancel</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>

    <!--Common-->
    <string name="btn_action_add">Save</string>
    <string name="btn_action_reset">Reset</string>
    <string name="btn_action_show">Show</string>
    <string name="btn_action_save">Save</string>


</resources>