<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="Detail"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:padding="8dp"
            android:text="@string/edt_input_book_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"/>
        <Spinner
            android:id="@+id/spBook"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtQuantity"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:hint="@string/edt_input_book_quantity" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_invoice_add"
            android:textAllCaps="false" />

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/btn_action_cancel"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>